feat: auth jwt feature
