# backend/internal/dto/auth_dto.go
@@ -1,0 +1,18 @@
+package dto
+
+type RegisterRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=50"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
+type LoginRequest struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type AuthResponse struct {
+	Token     string `json:"token"`
+	ExpiresIn int64  `json:"expires_in"` // Unix timestamp
+	Username  string `json:"username"`
+	Role      string `json:"role"`
+}
