# backend/internal/model/user.go
@@ -1,0 +1,8 @@
+package model
+
+type User struct {
+	Base
+	Username     string `gorm:"type:varchar(100);uniqueIndex;not null" json:"username"`
+	PasswordHash string `gorm:"type:varchar(255);not null" json:"-"`
+	Role         string `gorm:"type:varchar(50);default:'admin'" json:"role"`
+}
